load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "pango/src/services/hello",
    visibility = ["//visibility:private"],
    deps = ["//src/lib/stringutil"],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
