load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["multiples.go"],
    importpath = "pango/lib/mathutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["multiples_test.go"],
    embed = [":go_default_library"],
    deps = [
        # TODO: remove dependency and use reflect.DeepEqual
        # https://stackoverflow.com/a/15312182
        "//src/pango/lib/sliceutil:go_default_library",
    ],
)
