load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "pango/services/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//src/pango/lib/jwt/keys:go_default_library",
        "//src/pango/lib/web/response:go_default_library",
        "//src/pango/vendor/github.com/dgrijalva/jwt-go:go_default_library",
    ],
)

go_binary(
    name = "auth",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
