load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = glob(["**/*.go"]),
    importpath = "pango/services/cellar",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cellar",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
