load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = glob(["**/*.go"]),
    importpath = "pango/services/cellar",
    visibility = ["//visibility:private"],
    deps = [
        "//src/pango/services/cellar/app:go_default_library",
        "//src/pango/vendor/github.com/goadesign/goa:go_default_library",
        "//src/pango/vendor/github.com/goadesign/goa/middleware:go_default_library",
    ],
)

go_binary(
    name = "cellar",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
