load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "pango/services/hello",
    visibility = ["//visibility:private"],
    deps = [
        # deps are bazel paths not go import paths ...
        "//src/pango/lib/mathutil:go_default_library",
        "//src/pango/lib/stringutil:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)


# First we load the go_image and container_push rules
# load("@io_bazel_rules_docker//go:image.bzl", "go_image")
#
# go_image(
#     name = "image",
#     srcs = ["hello.go"],
#     # importpath = "github.com/your/path/here",
#     # goarch = "amd64",
#     # goos = "linux",
#     # pure = "on",
# )

# go_image(
#     name = "docker",
#     binary = ":hello",
# )
