load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["keys.go"],
    importpath = "pango/lib/jwt/keys",
    visibility = ["//visibility:public"],  # keep
)

go_test(
    name = "go_default_test",
    srcs = ["keys_test.go"],
    embed = [":go_default_library"],
)
