load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validate.go"],
    importpath = "pango/lib/jwt/middleware",
    visibility = ["//visibility:public"],  # keep
    deps = [
        "//src/pango/lib/jwt/keys:go_default_library",
        "//src/pango/vendor/github.com/dgrijalva/jwt-go:go_default_library",
    ],
)
