load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["commands.go"],
    importpath = "pango/services/cellar/tool/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pango/services/cellar/client:go_default_library",
        "//src/pango/vendor/github.com/goadesign/goa:go_default_library",
        "//src/pango/vendor/github.com/goadesign/goa/client:go_default_library",
        "//src/pango/vendor/github.com/goadesign/goa/uuid:go_default_library",
        "//src/pango/vendor/github.com/spf13/cobra:go_default_library",
    ],
)
